# conan-xbuild-scenarios

./: .gitignore  LICENSE  README.md
_profiles/: android  host
_recipes/android_ndk/: CMakeLists.txt  conanfile.py
_recipes/android_ndk/android_ndk/: lib.cpp  lib.h  main.cpp
_recipes/android_ndk/toolchains/: api_level_27.cmake  api_level_28.cmake  api_level_29.cmake
_recipes/protobuf/: CMakeLists.txt  conanfile.py
_recipes/protobuf/cmake/: macro.cmake
_recipes/protobuf/protobuf/: main.cpp
_recipes/zlib/: CMakeLists.txt  conanfile.py
_recipes/zlib/zlib/: lib.cpp  lib.h
android_ndk/: README.md  run.sh
protobuf/: README.md  run.sh
protobuf/example1/: CMakeLists.txt  conanfile.py  conanfile.txt  main.cpp  run.sh
protobuf/protobuf/: CMakeLists.txt  conanfile.py
protobuf/protobuf/protobuf/: lib.cpp  lib.h
